Improve file transfer (new preferences, etc.) Add ability to save stored SSH keys as files. Update German and Slovak translations.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -252,29 +252,51 @@
   <string name="pref_file_dialog_summary">Formular zur Auswahl von Dateien und Verzeichnissen</string>
   <string name="pref_file_dialog_builtin">eingebaut</string>
   <string name="error_starting_app">Fehler beim Ausführen von %1$s</string>
+  <string name="file_chooser_select_file">Datei %1s auswählen</string>
+  <string name="for_download">fürs Herunterladen</string>
+  <string name="for_upload">fürs Hochladen</string>
+  <string name="for_key_import">für den Schlüssel-Import</string>  
   <string name="location">Position</string>
   <string name="cant_read_folder">Fehler beim lesen des Verzeichnisses.</string>
   <string name="nnew">Neu</string>
   <string name="select">Auswählen</string>
   <string name="file_name">Dateiname:</string>
   <string name="cancel">Abbrechen</string>
-  <string name="create">Speichern</string>
+  <string name="save">Speichern</string>
+  <string name="new_file">Neue Datei</string>
   <string name="no_data">Keine Daten</string>
   <string name="pref_download_folder">Download-Verzeichnis</string>
   <string name="pref_download_folder_summary">Pfad zum Speichern von heruntergeladenen Dateien</string>
+  <string name="pref_remote_upload_folder">Upload-Verzeichnis</string>
+  <string name="pref_remote_upload_folder_summary">Server-Pfad für das Hochladen von Dateien</string>
+  <string name="pref_upload_dest_prompt">Upload-Ziel abfragen</string>
+  <string name="pref_upload_dest_prompt_summary">Zielpfad für Dateiuploads abfragen</string>  
   <string name="pref_background_file_transfer">Hintergrundübertragung von Dateien</string>
-  <string name="pref_background_file_transfer_summary">Das Herunterladen und Hochladen von Dateien im Hintergrund ausführen.</string>	
+  <string name="pref_background_file_transfer_summary">Das Herunterladen und Hochladen von Dateien im Hintergrund ausführen</string>
   <string name="transfer_downloading">Herunterladen von Dateien...</string>
   <string name="transfer_downloading_file">Lade herunter: %1$s</string>
   <string name="transfer_download_complete">Herunterladen abgeschlossen: %1$s</string>
   <string name="transfer_download_failed">Fehler beim Herunterladen: %1$s</string>
   <string name="transfer_downloads_failed">Fehler beim Herunterladen:%1$s</string>
-  <string name="transfer_pick_remote">Entfernte Datei auswählen</string>
-  <string name="transfer_pick_remote_desc">Pfade der herunterzuladenden entfernten Dateien (eine pro Zeile)</string>
-  <string name="transfer_remote_action">Herunterladen</string>
+  <string name="transfer_select_remote_download_title">Datei(en) herunterladen</string>
+  <string name="transfer_select_remote_download_desc">Pfade der herunterzuladenden entfernten Dateien eintragen (zeilenweise)</string>
+  <string name="transfer_select_remote_upload_dest_title">Zielpfad für Upload</string>
+  <string name="transfer_select_remote_upload_dest_desc">Gewünschter Server-Pfad für:</string>  
+  <string name="transfer_button_download">Herunterladen</string>
+  <string name="transfer_button_upload">Hochladen</string>
   <string name="transfer_uploading">Hochladen von Dateien...</string>
   <string name="transfer_uploading_file">Lade hoch: %1$s</string>
   <string name="transfer_upload_complete">Hochladen abgeschlossen: %1$s</string>
   <string name="transfer_upload_failed">Fehler beim Hochladen: %1$s</string>
   <string name="transfer_uploads_failed">Fehler beim Hochladen:%1$s</string>
+  <string name="pubkey_export_private">"Privaten Schlüssel exportieren"</string>
+  <string name="pubkey_export_public">"Öffentlichen Schlüssel exportieren"</string>	
+  <string name="pubkey_public_save_as">Öffentlichen Schlüssel speichern</string>
+  <string name="pubkey_public_save_as_desc">Dateiname (oder voller Pfad) zum Speichern des öffentlichen Schlüssels</string>
+  <string name="pubkey_private_save_as">Privaten Schlüssel speichern</string>
+  <string name="pubkey_private_save_as_desc">Dateiname (oder voller Pfad) zum Speichern des privaten Schlüssels</string>
+  <string name="pubkey_public_export_success">Öffentlicher Schlüssel gespeichert als %1$s</string>
+  <string name="pubkey_public_export_problem">Fehler beim Export des öffentlichen Schlüssels</string>
+  <string name="pubkey_private_export_success">Privater Schlüssel gespeichert als %1$s</string>
+  <string name="pubkey_private_export_problem">Fehler beim Export des privaten Schlüssels</string>  
 </resources>
