--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -33,7 +33,7 @@
   <string name="pubkey_unknown_format">Neznámy formát</string>
   <string name="pubkey_change_password">Zmeniť heslo</string>
   <string name="pubkey_list_pick">Vyberte z /sdcard</string>
-  <string name="pubkey_import_parse_problem">Problém s importom súkromného kľúča</string>
+  <string name="pubkey_import_parse_problem">Chyba pri importe súkromného kľúča</string>
   <string name="pubkey_unlock">Odomknúť kľúč</string>
   <string name="pubkey_failed_add">Nesprávne heslo pre kľúč \'%1$s\'. Overenie zlyhalo.</string>
   <string name="pubkey_memory_load">Nahrať do pamäte</string>
@@ -155,7 +155,7 @@
   <string name="portforward_dynamic">Dynamický (SOCKS)</string>
   <string name="portforward_pos">Vytvoriť presmerovanie portu</string>
   <string name="portforward_done">Premerovanie portu úspešne vytvorené</string>
-  <string name="portforward_problem">Problém s vytvorením presmerovania portu, možno používate port menší ako 1024 alebo je už obsadený?</string>
+  <string name="portforward_problem">Chyba pri vytvorení presmerovania portu, možno používate port menší ako 1024 alebo je už obsadený?</string>
   <string name="portforward_menu_add">Pridať presmerovanie portu</string>
   <string name="hint_userhost">používateľské_meno\@hostiteľ</string>
   <string name="list_format_error">Použite formát \"%1$s\"</string>
@@ -252,16 +252,25 @@
   <string name="pref_file_dialog_summary">Formulár na výber súborov a priečinkov</string>
   <string name="pref_file_dialog_builtin">zabudovaný</string>
   <string name="error_starting_app">Nepodarilo sa spustiť %1$s</string>
+  <string name="file_chooser_select_file">Vybrať súbor %1s</string>
+  <string name="for_download">na prevzatie</string>
+  <string name="for_upload">na odoslanie</string>
+  <string name="for_key_import">na import kľúča</string> 
   <string name="location">Umiestnenie</string>
   <string name="cant_read_folder">Chyba pri čítaní priečinka.</string>
   <string name="nnew">Nové</string>
   <string name="select">Vybrať</string>
   <string name="file_name">Názov súbora:</string>
   <string name="cancel">Zrušiť</string>
-  <string name="create">Uložiť</string>
+  <string name="save">Uložiť</string>
+  <string name="new_file">Nový súbor</string>
   <string name="no_data">Žiadne dáta</string>
   <string name="pref_download_folder">Priečinok pre preberanie</string>
   <string name="pref_download_folder_summary">Cesta pre ukladanie prevzatých súborov</string>
+  <string name="pref_remote_upload_folder">Vzdialený priečinok pre odosielanie</string>
+  <string name="pref_remote_upload_folder_summary">Vzdialená cesta pre odosielanie súborov</string>
+  <string name="pref_upload_dest_prompt">Pýtať sa na vzdialené umiestnenie</string>
+  <string name="pref_upload_dest_prompt_summary">Zadávať vzdialený nazov alebo cestu pre odosielaný súbor</string>    
   <string name="pref_background_file_transfer">Prenos súborov na pozadí</string>
   <string name="pref_background_file_transfer_summary">Odosielanie a preberanie súborov uskutočniť na pozadí.</string>	
   <string name="transfer_downloading">Preberanie súborov...</string>
@@ -269,12 +278,27 @@
   <string name="transfer_download_complete">Preberanie ukončené: %1$s</string>
   <string name="transfer_download_failed">Chyba pri preberaní: %1$s</string>
   <string name="transfer_downloads_failed">Chyby pri preberaní:%1$s</string>
-  <string name="transfer_pick_remote">Vybrať vzdialený súbor</string>
-  <string name="transfer_pick_remote_desc">Cesty k vzdialeným súborom na prevzatie (na každom riadku jeden)</string>
-  <string name="transfer_remote_action">Prevziať</string>
+  <string name="transfer_select_remote">Vybrať vzdialený súbor</string>
+  <string name="transfer_select_remote_desc"></string>
+  <string name="transfer_select_remote_download_title">Prevziať súbor(y)</string>
+  <string name="transfer_select_remote_download_desc">Cesty k vzdialeným súborom na prevzatie (jeden na riadok)</string>
+  <string name="transfer_select_remote_upload_dest_title">Umiestnenie odosielaného súbora</string>
+  <string name="transfer_select_remote_upload_dest_desc">Vzdialené umiestnenie pre:</string>  
+  <string name="transfer_button_download">Prevziať</string>
+  <string name="transfer_button_upload">Odoslať</string>
   <string name="transfer_uploading">Odosielanie súborov...</string>
   <string name="transfer_uploading_file">Odosielanie súbora: %1$s</string>
   <string name="transfer_upload_complete">Odosielanie ukončené: %1$s</string>
   <string name="transfer_upload_failed">Chyba pri odosielaní: %1$s</string>
   <string name="transfer_uploads_failed">Chyby pri odosielaní:%1$s</string>
+  <string name="pubkey_export_private">"Exportovať súkromný kľúč"</string>
+  <string name="pubkey_export_public">"Exportovať verejný kľúč"</string>	
+  <string name="pubkey_public_save_as">Uložiť verejný kľúč</string>
+  <string name="pubkey_public_save_as_desc">Názov súboru (alebo celá cesta) pre uloženie verejného kľúča</string>
+  <string name="pubkey_private_save_as">Uložiť súkromný kľúč</string>
+  <string name="pubkey_private_save_as_desc">Názov súboru (alebo celá cesta) pre uloženie súkromného kľúča</string>
+  <string name="pubkey_public_export_success">Verejný kľúč bol uložený ako %1$s</string>
+  <string name="pubkey_public_export_problem">Chyba pri exporte verejného kľúča</string>
+  <string name="pubkey_private_export_success">Súkromný kľúč bol uložený ako %1$s</string>
+  <string name="pubkey_private_export_problem">Chyba pri exporte súkromného kľúča</string>    
 </resources>
