--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -292,9 +292,9 @@
   <string name="pubkey_export_private">"Privaten Schlüssel exportieren"</string>
   <string name="pubkey_export_public">"Öffentlichen Schlüssel exportieren"</string>	
   <string name="pubkey_public_save_as">Öffentlichen Schlüssel speichern</string>
-  <string name="pubkey_public_save_as_desc">Dateiname (oder voller Pfad) zum Speichern des öffentlichen Schlüssels</string>
+  <string name="pubkey_public_save_as_desc">Dateiname (volständiger Pfad) zum Speichern des öffentlichen Schlüssels</string>
   <string name="pubkey_private_save_as">Privaten Schlüssel speichern</string>
-  <string name="pubkey_private_save_as_desc">Dateiname (oder voller Pfad) zum Speichern des privaten Schlüssels</string>
+  <string name="pubkey_private_save_as_desc">Dateiname (volständiger Pfad) zum Speichern des privaten Schlüssels</string>
   <string name="pubkey_public_export_success">Öffentlicher Schlüssel gespeichert als %1$s</string>
   <string name="pubkey_public_export_problem">Fehler beim Export des öffentlichen Schlüssels</string>
   <string name="pubkey_private_export_success">Privater Schlüssel gespeichert als %1$s</string>
