--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -584,9 +584,9 @@
 	<string name="pubkey_export_private">"Export private key"</string>
 	<string name="pubkey_export_public">"Export public key"</string>
 	<string name="pubkey_public_save_as">Save public key</string>
-	<string name="pubkey_public_save_as_desc">File name (or full path) to save public key as</string>
+	<string name="pubkey_public_save_as_desc">File name (full path) to save the public key</string>
 	<string name="pubkey_private_save_as">Save private key</string>
-	<string name="pubkey_private_save_as_desc">File name (or full path) to save private key as</string>
+	<string name="pubkey_private_save_as_desc">File name (full path) to save the private key</string>
 	<string name="pubkey_public_export_success">Public key saved as %1$s</string>
 	<string name="pubkey_public_export_problem">Error exporting public key</string>
 	<string name="pubkey_private_export_success">Private key saved as %1$s</string>
