--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -277,9 +277,8 @@
   <string name="pref_background_file_transfer_summary">Das Herunterladen und Hochladen von Dateien im Hintergrund ausführen</string>
   <string name="transfer_downloading">Herunterladen von Dateien...</string>
   <string name="transfer_downloading_file">Lade herunter: %1$s</string>
-  <string name="transfer_download_complete">Herunterladen abgeschlossen: %1$s</string>
+  <string name="transfer_download_complete">Herunterladen abgeschlossen</string>
   <string name="transfer_download_failed">Fehler beim Herunterladen: %1$s</string>
-  <string name="transfer_downloads_failed">Fehler beim Herunterladen:%1$s</string>
   <string name="transfer_select_remote_download_title">Datei(en) herunterladen</string>
   <string name="transfer_select_remote_download_desc">Pfade der herunterzuladenden entfernten Dateien eintragen (zeilenweise)</string>
   <string name="transfer_select_remote_upload_dest_title">Zielpfad für Upload</string>
@@ -288,9 +287,8 @@
   <string name="transfer_button_upload">Hochladen</string>
   <string name="transfer_uploading">Hochladen von Dateien...</string>
   <string name="transfer_uploading_file">Lade hoch: %1$s</string>
-  <string name="transfer_upload_complete">Hochladen abgeschlossen: %1$s</string>
-  <string name="transfer_upload_failed">Fehler beim Hochladen: %1$s</string>
-  <string name="transfer_uploads_failed">Fehler beim Hochladen:%1$s</string>
+  <string name="transfer_upload_complete">Hochladen abgeschlossen</string>
+  <string name="transfer_upload_failed">Fehler beim Hochladen:%1$s</string>
   <string name="pubkey_export_private">"Privaten Schlüssel exportieren"</string>
   <string name="pubkey_export_public">"Öffentlichen Schlüssel exportieren"</string>	
   <string name="pubkey_public_save_as">Öffentlichen Schlüssel speichern</string>
