--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -277,9 +277,8 @@
   <string name="pref_background_file_transfer_summary">Odosielanie a preberanie súborov uskutočniť na pozadí.</string>	
   <string name="transfer_downloading">Preberanie súborov...</string>
   <string name="transfer_downloading_file">Preberanie súbora: %1$s</string>
-  <string name="transfer_download_complete">Preberanie ukončené: %1$s</string>
-  <string name="transfer_download_failed">Chyba pri preberaní: %1$s</string>
-  <string name="transfer_downloads_failed">Chyby pri preberaní:%1$s</string>
+  <string name="transfer_download_complete">Preberanie ukončené</string>
+  <string name="transfer_download_failed">Chyba pri preberaní:%1$s</string>
   <string name="transfer_select_remote">Vybrať vzdialený súbor</string>
   <string name="transfer_select_remote_desc"></string>
   <string name="transfer_select_remote_download_title">Prevziať súbor(y)</string>
@@ -290,9 +289,8 @@
   <string name="transfer_button_upload">Odoslať</string>
   <string name="transfer_uploading">Odosielanie súborov...</string>
   <string name="transfer_uploading_file">Odosielanie súbora: %1$s</string>
-  <string name="transfer_upload_complete">Odosielanie ukončené: %1$s</string>
-  <string name="transfer_upload_failed">Chyba pri odosielaní: %1$s</string>
-  <string name="transfer_uploads_failed">Chyby pri odosielaní:%1$s</string>
+  <string name="transfer_upload_complete">Odosielanie ukončené</string>
+  <string name="transfer_upload_failed">Chyba pri odosielaní:%1$s</string>
   <string name="pubkey_export_private">"Exportovať súkromný kľúč"</string>
   <string name="pubkey_export_public">"Exportovať verejný kľúč"</string>	
   <string name="pubkey_public_save_as">Uložiť verejný kľúč</string>
