--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -500,9 +500,10 @@
 
 	<string name="button_close">Close</string>
 
-	<!--  Sony Xperia (mini) pro HW keyboard fix -->
-	<string name="pref_xperiapro_title">Sony Ericsson Xperia (mini) pro key remap</string>
-	<string name="pref_xperiapro_summary">Remap keys on Xperia (mini) pro hardware keyboard</string>
+	<!--  Keyboard customization -->
+	<string name="pref_custom_keymap_title">Custom Keymap</string>
+	<string name="pref_custom_keymap_summary">Remapping of special keys on supported devices</string>
+	<string name="pref_custom_keymap_disabled">disabled</string>
 
 	<!--  Force screen size -->
 	<string name="pref_default_size_category">Default sizing values</string>
