--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -163,7 +163,12 @@
 	<!-- Name for the full screen preference -->
 	<string name="pref_fullscreen_title">"Full screen"</string>
 	<!-- Summary for the full screen preference -->
-	<string name="pref_fullscreen_summary">"Hide status bar while in console"</string>
+	<string name="pref_fullscreen_summary">"Start terminal in full screen mode"</string>
+
+	<!-- Name for the Action Bar preference -->
+	<string name="pref_hide_actionbar_title">"Hide Action Bar"</string>
+	<!-- Summary for the Action Bar preference -->
+	<string name="pref_hide_actionbar_summary">"Do not display the Action Bar in terminal window"</string>
 
 	<!-- Name for the memorize keys preference -->
 	<string name="pref_memkeys_title">"Remember keys in memory"</string>
@@ -601,6 +606,7 @@
 
 	<!--  Long Press Menu -->
 	<string name="longpress_select_action">Select Action</string>
-	<string name="longpress_show_actionbar">Show Action Bar</string>
-	<string name="longpress_hide_actionbar">Hide Action Bar</string>
+	<string name="longpress_enable_full_screen_mode">Enable full screen mode</string>
+	<string name="longpress_disable_full_screen_mode">Disable full screen mode</string>
+	<string name="longpress_change_font_size">Change font size</string>
 </resources>
